<resources>
    <string name="app_name">Fuel Tracker</string>
    <string name="premium">Premium</string>
    <string name="regular">Regular</string>
    <string name="mid">Mid</string>
    <string name="no_data">NO RESULTS</string>
    <string name="no_connection">NO CONNECTION</string>

    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>

    <string name="settings_min_distance_label">Minimum Distance</string>
    <string name="settings_min_distance_key" translatable="false">min_distance</string>
    <string name="settings_min_distance_default" translatable="false">5</string>


    <string name="dateColumn">Date</string>
    <string name="spentColumn">Spent</string>
    <string name="gallonsColumn">Gallons</string>
    <string name="priceColumn">Price</string>
    <string name="stationColumn">Station</string>
    <string name="gasColumn">Gas</string>

    <string name="dateHint">ENTER DATE</string>
    <string name="spentHint">ENTER AMOUNT SPENT</string>
    <string name="gallonsHint">ENTER GALLONS</string>
    <string name="priceHint">ENTER PRICE</string>
    <string name="stationHint">ENTER STATION NAME</string>

    <string name="station_arco">ARCO</string>
    <string name="station_mobil">MOBIL</string>
    <string name="station_76">76</string>
    <string name="station_shell">SHELL</string>
    <string name="station_chevron">CHEVRON</string>
    <string name="station_valero">VALERO</string>
    <string name="station_other">OTHER</string>

    <string name="gas_regular">REGULAR</string>
    <string name="gas_mid">MID</string>
    <string name="gas_premium">PREMIUM</string>

    <string name="addSave">SAVE</string>
    <string name="addCancel">CANCEL</string>

    <string name="dialogYes">YES</string>
    <string name="dialogNo">NO</string>
    <string name="dialogEdit">EDIT</string>
    <string name="dialogDone">DONE</string>
    <string name="dialogDelete">DELETE</string>
    <string name="dialogSave">SAVE</string>
    <string name="dialogCancel">CANCEL</string>
</resources>
