<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_corners">

    <RelativeLayout
        android:id="@+id/currentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/columnsEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="DATE"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="SPENT"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="GALLONS"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="PRICE"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="STATION"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/currentEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:id="@+id/currentSpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:id="@+id/currentGallons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:id="@+id/currentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp">
            </View>
            <TextView
                android:id="@+id/currentStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="text"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/deleteEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="ARE YOU SURE?"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/editEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="3dp"
                    android:layout_gravity="bottom"
                    android:textSize="20sp"
                    android:text="@string/spentColumn" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editSpent"
                            android:inputType="numberDecimal"
                            android:hint="@string/spentHint"
                            style="@style/EditTextProfile"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="3dp"
                    android:layout_gravity="bottom"
                    android:textSize="20sp"
                    android:text="@string/priceColumn" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editPrice"
                            android:inputType="numberDecimal"
                            android:hint="@string/priceHint"
                            style="@style/EditTextProfile"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="3dp"
                    android:layout_gravity="bottom"
                    android:textSize="20sp"
                    android:text="@string/stationColumn" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editStation"
                            android:inputType="text"
                            android:hint="@string/stationHint"
                            style="@style/EditTextProfile"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/currentLayout">
    </View>

    <RelativeLayout
        android:id="@+id/buttonsEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/editButton"
            style="@style/DialogButtonStyle"
            android:layout_alignParentStart="true"
            android:text="@string/dialogEdit"/>
        <Button
            android:id="@+id/doneButton"
            style="@style/DialogButtonStyle"
            android:layout_centerInParent="true"
            android:text="@string/dialogDone"/>
        <Button
            android:id="@+id/cancelButton"
            style="@style/DialogButtonStyle"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:text="@string/dialogCancel"/>
        <Button
            android:id="@+id/saveButton"
            style="@style/DialogButtonStyle"
            android:layout_alignParentStart="true"
            android:visibility="gone"
            android:text="@string/dialogSave"/>
        <Button
            android:id="@+id/deleteButton"
            style="@style/DialogButtonStyle"
            android:layout_alignParentEnd="true"
            android:text="@string/dialogDelete"/>
        <Button
            android:id="@+id/yesButton"
            style="@style/DialogButtonStyle"
            android:layout_alignParentStart="true"
            android:visibility="gone"
            android:text="@string/dialogYes"/>
        <Button
            android:id="@+id/noButton"
            style="@style/DialogButtonStyle"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:text="@string/dialogNo"/>
    </RelativeLayout>
</RelativeLayout>