<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataColumnContainer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/layout_corners"
        android:backgroundTint="#CCC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dateColumn"
        style="@style/ColumnText"
        android:text="@string/dateColumn"
        app:layout_constraintTop_toTopOf="@id/dataColumnContainer"
        app:layout_constraintBottom_toBottomOf="@id/dataColumnContainer"
        app:layout_constraintStart_toStartOf="@id/dataColumnContainer"
        app:layout_constraintEnd_toStartOf="@id/spentColumn"/>

    <TextView
        android:id="@+id/spentColumn"
        style="@style/ColumnText"
        android:text="@string/spentColumn"
        app:layout_constraintTop_toTopOf="@id/dataColumnContainer"
        app:layout_constraintBottom_toBottomOf="@id/dataColumnContainer"
        app:layout_constraintStart_toEndOf="@id/dateColumn"
        app:layout_constraintEnd_toStartOf="@id/gallonsColumn"/>

    <TextView
        android:id="@+id/gallonsColumn"
        style="@style/ColumnText"
        android:text="@string/gallonsColumn"
        app:layout_constraintTop_toTopOf="@id/dataColumnContainer"
        app:layout_constraintBottom_toBottomOf="@id/dataColumnContainer"
        app:layout_constraintStart_toEndOf="@id/spentColumn"
        app:layout_constraintEnd_toStartOf="@id/priceColumn"/>

    <TextView
        android:id="@+id/priceColumn"
        style="@style/ColumnText"
        android:text="@string/priceColumn"
        app:layout_constraintTop_toTopOf="@id/dataColumnContainer"
        app:layout_constraintBottom_toBottomOf="@id/dataColumnContainer"
        app:layout_constraintStart_toEndOf="@id/gallonsColumn"
        app:layout_constraintEnd_toStartOf="@id/stationColumn"/>

    <TextView
        android:id="@+id/stationColumn"
        style="@style/ColumnText"
        android:text="@string/stationColumn"
        app:layout_constraintTop_toTopOf="@id/dataColumnContainer"
        app:layout_constraintBottom_toBottomOf="@id/dataColumnContainer"
        app:layout_constraintStart_toEndOf="@id/priceColumn"
        app:layout_constraintEnd_toEndOf="@id/dataColumnContainer"/>

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="NO DATA"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataColumnContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyListRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/dataColumnContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_fab"
        android:backgroundTint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>