<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    android:id="@+id/stationContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="3dp"
    android:background="@drawable/layout_corners"
    app:layoutDescription="@xml/is_favorite">

    <TextView
        android:id="@+id/regularPrice"
        style="@style/GasPrice"
        android:backgroundTint="@color/priceCircleRegular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/typeRegular"
        style="@style/GasType"
        android:text="@string/regular"
        app:layout_constraintTop_toTopOf="@id/regularPrice"
        app:layout_constraintStart_toEndOf="@id/regularPrice"/>

    <TextView
        android:id="@+id/midPrice"
        style="@style/GasPrice"
        android:backgroundTint="@color/priceCircleMid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/regularPrice"
        app:layout_constraintEnd_toStartOf="@id/premiumPrice"/>

    <TextView
        android:id="@+id/typeMid"
        style="@style/GasType"
        android:text="@string/mid"
        app:layout_constraintTop_toTopOf="@id/midPrice"
        app:layout_constraintStart_toEndOf="@id/midPrice"/>

    <TextView
        android:id="@+id/premiumPrice"
        style="@style/GasPrice"
        android:backgroundTint="@color/priceCirclePremium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/midPrice"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/typePremium"
        style="@style/GasType"
        android:text="@string/premium"
        app:layout_constraintTop_toTopOf="@id/premiumPrice"
        app:layout_constraintStart_toEndOf="@id/premiumPrice"/>

    <ImageView
        android:id="@+id/stationLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:elevation="20dp"
        app:layout_constraintVertical_bias=".23"
        app:layout_constraintTop_toBottomOf="@id/regularPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/stationName"
        style="@style/StationDetails"
        android:text="text"
        app:layout_constraintHorizontal_bias=".45"
        app:layout_constraintBottom_toTopOf="@id/stationAddress"
        app:layout_constraintStart_toEndOf="@id/stationLogo"
        app:layout_constraintEnd_toStartOf="@id/stationDistance"
        app:layout_constraintTop_toTopOf="@id/stationLogo"/>

    <TextView
        android:id="@+id/stationAddress"
        style="@style/StationDetails"
        android:text="text"
        app:layout_constraintHorizontal_bias=".45"
        app:layout_constraintBottom_toTopOf="@id/stationCity"
        app:layout_constraintStart_toEndOf="@id/stationLogo"
        app:layout_constraintEnd_toStartOf="@id/stationDistance"
        app:layout_constraintTop_toBottomOf="@id/stationName"/>

    <TextView
        android:id="@+id/stationCity"
        style="@style/StationDetails"
        android:text="text"
        app:layout_constraintHorizontal_bias=".45"
        app:layout_constraintStart_toEndOf="@id/stationLogo"
        app:layout_constraintEnd_toStartOf="@id/stationDistance"
        app:layout_constraintTop_toBottomOf="@id/stationAddress"/>

    <TextView
        android:id="@+id/stationDistance"
        style="@style/StationDetails"
        android:text="text"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favoriteButton"/>

    <View
        android:id="@+id/favoriteButtonOverlay"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/favoriteButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_not_favorite"
        app:altSrc="@drawable/ic_is_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.motion.widget.MotionLayout>